# agent-n8on

./: .env  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BRAIN_ARCHITECTURE.md  CLAUDE.md  CONTROLLER_CHEATSHEET.md  CONTROLLER_README.md  ENGINEERING_LOG.md  IMPLEMENTATION_STATUS.md  INSTALLER_SPEC.md  Instruction.txt  PROJECT_IDEA.md  README.md  README_CONTROLLER_PACKAGE.md  RELEASE_NOTES_v5.2.md  ROADMAP.md  SESSION_SUMMARY.md  SPECIFICATION.md  aels.ps1  agent_v2.py  agent_v3.py  agent_v3_backup_20260212_100603.py  build.bat  controller_integration_patch.py  create_icons.py  dry_run_validator.py  install.bat  install_controller.py  n8n_recipes.py  n8n_validator.py  package-lock.json  package.json  requirements.txt  run_tests.ps1  schema_injector.py  session_full_log.txt  test_brain_e2e_integration.py  test_brain_layer.py  (+23 more)
backend/: agent_config.py  controller.py  decision_logger.py  n8on.py
brain/: __init__.py  brain_layer.py  executor.py  learned_rules.md  test_error_interpreter.py
docs/: BUG_TRACKER.md  ENGINEERING_LOG.md  NEXT_STEPS.md  PROJECT_MEMORY.md  n8n_skills_extraction_plan.md
engineering_log/: 2026-02-12.md  DAILY_TEMPLATE.md  README.md  TASK_TEMPLATE.md  TROUBLESHOOTING.md
logs/: log_2026-02-11.jsonl  log_2026-02-12.jsonl  log_2026-03-04.jsonl  log_2026-03-06.jsonl
memory/: chat_history.json  intent_cache.json  session_state.json  user_profile.json
project_memory/: ARCHITECTURE.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: uninstall.nsi
src-tauri/src/: installer.rs  main.rs
(+87 files in other folders)
